@@ -6,6 +6,7 @@
   - Resubable workflows support
   - Add `add_scale_suffix` for add suffix for instance name by default.
   - Filter network by datacenters before attach.
+  - Start vm on create only with `enable_start_vm` equal to True.
 2.15.1:
   - Fix mistake with network adapters type. #138
 2.15.0:
